amazon-dynamodb/1.5/modules/ROOT/pages/amazon-dynamodb-connector-reference.adoc
= Amazon DynamoDB Connector Reference 
:page-aliases: connectors::amazon/amazon-dynamodb-connector-reference.adoc



Amazon DynamoDB Connector v1.4

Release Notes: xref:release-notes::connector/amazon-dynamodb-connector-release-notes-mule-4.adoc[Amazon DynamoDB Connector Release Notes]

== Configurations
---
[[config]]
=== Default Configuration


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_basic, Basic>>
* <<config_role, Role>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[config_basic]]
===== Basic


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Session Token a| String |  The session token provided by Amazon STS. |  |
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  |
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 |
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Socket Timeout* field.  |  SECONDS | 
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to true to obtain credentials from the AWS environment, See: `+https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html+` |  false |
| Custom Service Endpoint a| String |  Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. For local connections, set this field to `\http://localhost:8000/`. |  | 
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Host a| String |  The optional proxy host. |  |
| Port a| Number |  The optional proxy port. |  |
| Username a| String |  The optional proxy username. |  |
| Password a| String |  The optional proxy password. |  |
| Domain a| String |  The optional proxy domain. |  |
| Workstation a| String |  The optional proxy workstation. |  |
|===

[[config_role]]
===== Role

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Role ARN a| String |  The Role ARN unique identifies role to assume to gain cross account access. |  | x
| Custom STS Endpoint a| String |  Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. The custom STS endpoint might not work if `DefaultAWSCredentialsProviderChain` is used. Instead, use AWS environment variables such as `AWS_STS_REGIONAL_ENDPOINTS`, `AWS_REGION`, and `AWS_ENDPOINT_URL`. |  | 
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  |
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 |
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Socket Timeout* field.  |  SECONDS | 
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to true to obtain credentials from the AWS environment, See: `+https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html+` |  false |
| Custom Service Endpoint a| String |  Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. For local connections, set this field to `\http://localhost:8000/`. |  | 
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Host a| String |  The optional proxy host. |  |
| Port a| Number |  The optional proxy port. |  |
| Username a| String |  The optional proxy username. |  |
| Password a| String |  The optional proxy password. |  |
| Domain a| String |  The optional proxy domain. |  |
| Workstation a| String |  The optional proxy workstation. |  |
|===




[[streams-config]]
=== Streams Configuration


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<streams-config_streams, Streams>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[streams-config_streams]]
===== Streams

====== Supported Operations
* <<describeStream>>
* <<getRecords>>
* <<getShardIterator>>
* <<listStreams>>

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Session Token a| String |  The session token provided by Amazon STS. |  |
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  |
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 |
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Socket Timeout* field.  |  SECONDS | 
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to true to obtain credentials from the AWS environment, See: `+https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html+` |  false |
| Custom Service Endpoint a| String |  Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. For local connections, set this field to `\http://localhost:8000/`. |  | 
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Host a| String |  The optional proxy host. |  |
| Port a| Number |  The optional proxy port. |  |
| Username a| String |  The optional proxy username. |  |
| Password a| String |  The optional proxy password. |  |
| Domain a| String |  The optional proxy domain. |  |
| Workstation a| String |  The optional proxy workstation. |  |
|===

== Operations

* <<batchDeleteItem>>
* <<batchGetItem>>
* <<batchPutItem>>
* <<createTable>>
* <<deleteItem>>
* <<deleteTable>>
* <<describeTable>>
* <<getItem>>
* <<listTables>>
* <<paginatedQuery>>
* <<putItem>>
* <<query>>
* <<scan>>
* <<updateItem>>
* <<updateTable>>

[[batchDeleteItem]]
=== Batch Delete Item
`<dynamodb:batch-delete-item>`


The Batch Delete Item operation deletes multiple items in one or more tables.

For information, see the https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_BatchWriteItem.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Delete Items a| Object |  One or more items to delete from the table. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchWriteItemResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[batchGetItem]]
=== Batch Get Item
`<dynamodb:batch-get-item>`


The Batch Get Item operation returns the attributes of one or more items from one or more tables. You identify requested items by primary key.

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_BatchGetItem.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Items a| Object |  A map of one or more table names and, for each table, a map that describes one or more items to retrieve from that table. |  | x
| Return Consumed Capacity a| Enumeration, one of:

** INDEXES
** TOTAL
** NONE |  Determines the level of detail about provisioned throughput consumption that is returned in the response. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchGetItemResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[batchPutItem]]
=== Batch Put Item
`<dynamodb:batch-put-item>`


The Batch Put Item operation puts multiple items in one or more tables.

For information, see the https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_BatchWriteItem.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Put Items a| Object |  One or more items to insert into table. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchWriteItemResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[createTable]]
=== Create Table
`<dynamodb:create-table>`


The Create Table operation adds a new table to your account. In an AWS account, table names must be unique within each region.

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_CreateTable.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  The name of the table to create. |  | x
| Attribute Definitions a| Array of <<AttributeDefinition>> |  An array of attributes that describe the key schema for the table and indexes. |  | x
| Key Schemas a| Array of <<KeySchemaElement>> |  Specifies the attributes that make up the primary key for a table or an index. |  | x
| Read Capacity Units a| Number |  The maximum number of strongly consistent reads consumed per second before DynamoDB returns a ThrottlingException. |  | x
| Write Capacity Units a| Number |  The maximum number of writes consumed per second before DynamoDB returns a ThrottlingException. |  | x
| Global Secondary Indexes a| Array of <<GlobalSecondaryIndex>> |  One or more global secondary indexes (the maximum is five) to be created on the table. |  |
| Local Secondary Indexes a| Array of <<LocalSecondaryIndex>> |  One or more local secondary indexes (the maximum is five) to be created on the table. |  |
| Stream View Type a| Enumeration, one of:

** NEW_IMAGE
** OLD_IMAGE
** NEW_AND_OLD_IMAGES
** KEYS_ONLY |  When an item in the table is modified, StreamViewType determines what information is written to the table's stream. |  |
| Stream Enabled a| Boolean |  Indicates whether to enable Streams (true) or disable Streams (false). |  false |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<TableDescription>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[deleteItem]]
=== Delete Item
`<dynamodb:delete-item>`


This operation deletes a single item in a table by primary key.

For information, see the https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_DeleteItem.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  Table name. |  | x
| Primarykey a| Object |  Primary key name and value map. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<DeleteItemResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[deleteTable]]
=== Delete Table
`<dynamodb:delete-table>`


The Delete Table operation deletes a table and all of its items.

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_DeleteTable.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  The name of the table to delete. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<TableDescription>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[describeTable]]
=== Describe Table
`<dynamodb:describe-table>`


This operation returns information about the table, including the current status of the table, when it was created, the primary key schema, and any indexes on the table.

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_DescribeTable.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  The name of the table to describe. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<TableDescription>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[getItem]]
=== Get Item
`<dynamodb:get-item>`


The Get Item operation returns a set of attributes for the item with the given primary key.

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_GetItem.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  The name of the table containing the requested item. |  | x
| Key a| Object |  A map of attribute names to AttributeValue objects, representing the primary key of the item to retrieve. |  `#[payload]` |
| Attributes To Gets a| Array of String |  This is a legacy parameter. Use ProjectionExpression instead. |  |
| Consistent Read a| Boolean |  Determines the read consistency model: If set to true, then the operation uses strongly consistent reads; otherwise, the operation uses eventually consistent reads. |  false |
| Expression Attribute Names a| Object |  One or more substitution tokens for attribute names in an expression. The following are some use cases for using ExpressionAttributeNames: |  |
| Projection Expression a| String |  A string that identifies one or more attributes to retrieve from the table. |  |
| Return Consumed Capacity a| Enumeration, one of:

** INDEXES
** TOTAL
** NONE |  Determines the level of detail about provisioned throughput consumption returned in the response. |  NONE |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<GetItemResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[listTables]]
=== List Tables
`<dynamodb:list-tables>`


This operation returns an array of table names associated with the current account and endpoint.

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_ListTables.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Exclusive Start Table Name a| String |  The first table name that this operation will evaluate. Use the value that was returned for LastEvaluatedTableName in a previous operation. |  |
| Limit a| Number |  A maximum number of table names to return. If this parameter is not specified, the limit is 100. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ListTablesResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[paginatedQuery]]
=== Paginated Query
`<dynamodb:paginated-query>`

The *Paginated query* operation finds items based on primary key values. You can query any table or secondary index that has a composite primary key, a partition key, and a sort key. The operation returns pages with a limit specified in the *Limit* field or the maximum amount of 1MB data. This behavior differentiates from the existing *Query* operation that truncates the response ignoring the DynamoDB value of the *Last Evaluated Key* field, which indicates that the query has more matching items. 

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key Condition Expression a| String |  The condition that specifies the key values for items to retrieve by the *Query* operation. |  |
| Key Conditions a| Object |  This is a legacy parameter. Use *Key Condition Expression* instead. |  |
| Scan Index Forward a| Boolean |  Specifies the order for index traversal: If true (default), the traversal is performed in ascending order; if false, the traversal is performed in descending order. |  false |
| Select a| Enumeration, one of:

** ALL_ATTRIBUTES
** ALL_PROJECTED_ATTRIBUTES
** SPECIFIC_ATTRIBUTES
** COUNT |  The attributes to return in the result. |  |
| Attribute Names a| Object | One or more substitution tokens for attribute names in an expression. |  |
| Attribute Values a| Object | One or more values to substitute in an expression. |  |
| Table Name a| String | Name of the table containing the requested item. |  | x
| Attributes To Gets a| Array of String | This is a legacy parameter. Use the *Projection Expression* field instead. |  |
| Conditional Operator a| Enumeration, one of:

** AND
** OR | A logical operator to apply to the conditions. |  |
| Consistent Read a| Boolean | Determines the read consistency model: If set to true, then the operation uses strongly consistent reads; otherwise, the operation uses eventually consistent reads. |  false |
| Exclusive Start Key a| Object | The primary key of the first item that this operation evaluates. |  |
| Filter Expression a| String | A string that contains conditions that DynamoDB applies after the operation, but before the data is returned to you. Items that do not satisfy the criteria are not returned. |  |
| Index Name a| String | The name of a secondary index to scan. This index can be any local secondary index or global secondary index. |  |
| Limit a| Number | The maximum number of items to evaluate (not necessarily the number of matching items).  |  |
| Projection Expression a| String | A string that identifies one or more attributes to retrieve from the table. |  |
| Condition Filter a| Object | The condition that evaluates the query results after the items are read and returns only the desired values. |  |
| Return Consumed Capacity a| Enumeration, one of:

** INDEXES
** TOTAL
** NONE | The level of detail of the provisioned throughput consumption returned in the response. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[cols=".^50%,.^50%"]
|======================
| *Type* a| Array of Message of Array of Object payload and <<RequestIDAttribute>> attributes
|======================

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:THROTTLING_EXCEPTION 
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION 
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION 
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION 
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION 
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION 
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION 
* DYNAMODB:UNKNOWN 
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION 
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION 
* DYNAMODB:VALIDATION_EXCEPTION 
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION 
* DYNAMODB:ACCESS_DENIED_EXCEPTION






[[putItem]]
=== Put Item
`<dynamodb:put-item>`


This operation creates a new item, or replaces an old item with a new item. If an item that has the same primary key as the new item already exists in the specified table, the new item replaces the existing item.

For information, see the https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_PutItem.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  Table name. |  | x
| Item a| Object |  Item to be inserted. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<PutItemResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[query]]
=== Query
`<dynamodb:query>`


The Query operation finds items based on primary key values. You can query any table or secondary index that has a composite primary key (a partition key and a sort key).

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_Query.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key Condition Expression a| String |  The condition that specifies the key values for items to be retrieved by the Query action. |  |
| Key Conditions a| Object |  This is a legacy parameter. Use KeyConditionExpression instead. |  |
| Scan Index Forward a| Boolean |  Specifies the order for index traversal: If true (default), the traversal is performed in ascending order; if false, the traversal is performed in descending order. |  false |
| Select a| Enumeration, one of:

** ALL_ATTRIBUTES
** ALL_PROJECTED_ATTRIBUTES
** SPECIFIC_ATTRIBUTES
** COUNT |  The attributes to be returned in the result. |  |
| Attribute Names a| Object | One or more substitution tokens for attribute names in an expression. |  |
| Attribute Values a| Object | One or more values to substitute in an expression. |  |
| Table Name a| String | Name of the table containing the requested item. |  | x
| Attributes To Gets a| Array of String | This is a legacy parameter. Use the Projection Expression field instead. |  |
| Conditional Operator a| Enumeration, one of:

** AND
** OR | A logical operator to apply to the conditions. |  |
| Consistent Read a| Boolean | Determines the read consistency model: If set to true, then the operation uses strongly consistent reads; otherwise, the operation uses eventually consistent reads. |  false |
| Exclusive Start Key a| Object | The primary key of the first item that this operation evaluates. |  |
| Filter Expression a| String | A string that contains conditions that DynamoDB applies after the operation, but before the data is returned to you. Items that do not satisfy the criteria are not returned. |  |
| Index Name a| String | The name of a secondary index to scan. This index can be any local secondary index or global secondary index. |  |
| Limit a| Number | The maximum number of items to evaluate (not necessarily the number of matching items).  |  |
| Projection Expression a| String | A string that identifies one or more attributes to retrieve from the table. |  |
| Condition Filter a| Object | The condition that evaluates the query results after the items are read and returns only the desired values. |  |
| Return Consumed Capacity a| Enumeration, one of:

** INDEXES
** TOTAL
** NONE | The level of detail of the provisioned throughput consumption returned in the response. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<QueryResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[scan]]
=== Scan
`<dynamodb:scan>`


The Scan operation returns one or more items and item attributes by accessing every item in a table or secondary index. To have DynamoDB return fewer items, you can provide a Filter Expression operation.

For information, see the https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_Scan.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Segment a| Number |  For a parallel Scan request, Segment identifies an individual segment to be scanned by an application worker. |  |
| Select a| Enumeration, one of:

** ALL_ATTRIBUTES
** ALL_PROJECTED_ATTRIBUTES
** SPECIFIC_ATTRIBUTES
** COUNT |  The attributes to be returned in the result. |  |
| Total Segments a| Number |  For a parallel Scan request, TotalSegments represents the total number of segments into which the Scan operation is divided. |  |
| Attribute Names a| Object | One or more substitution tokens for attribute names in an expression. |  |
| Attribute Values a| Object | One or more values to substitute in an expression. |  |
| Table Name a| String | Name of the table containing the requested item. |  | x
| Attributes To Gets a| Array of String | This is a legacy field. Use the Projection Expression field instead. |  |
| Conditional Operator a| Enumeration, one of:

** AND
** OR | A logical operator to apply to the conditions. |  |
| Consistent Read a| Boolean | Determines the read consistency model: If set to true, then the operation uses strongly consistent reads; otherwise, the operation uses eventually consistent reads.  |  false |
| Exclusive Start Key a| Object | The primary key of the first item that this operation evaluates. |  |
| Filter Expression a| String | A string that contains conditions that DynamoDB applies after the operation, but before the data is returned to you. Items that do not satisfy the criteria are not returned. |  |
| Index Name a| String | The name of a secondary index to scan. This index can be any local secondary index or global secondary index. |  |
| Limit a| Number | The maximum number of items to evaluate (not necessarily the number of matching items).  |  |
| Projection Expression a| String | A string that identifies one or more attributes to retrieve from the table.  |  |
| Condition Filter a| Object | The condition that evaluates the query results after the items are read and returns only the desired values. |  |
| Return Consumed Capacity a| Enumeration, one of:

** INDEXES
** TOTAL
** NONE | The level of detail of the provisioned throughput consumption returned in the response.. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ScanResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[updateItem]]
=== Update Item
`<dynamodb:update-item>`


This operation edits an existing item's attributes, or adds a new item to the table if it does not already exist.

For information, see the https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_UpdateItem.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  Table name. |  | x
| Key a| Object |  Primary key. |  `#[payload]` |
| Return Consumed Capacity a| Enumeration, one of:

** INDEXES
** TOTAL
** NONE |  Determines the level of detail about provisioned throughput consumption that is returned in the response. |  |
| Return Item Collection Metrics a| Enumeration, one of:

** SIZE
** NONE |  Determines whether item collection metrics are returned. |  |
| Return Values a| Enumeration, one of:

** NONE
** ALL_OLD
** UPDATED_OLD
** ALL_NEW
** UPDATED_NEW |  Use if you want to get the item attributes as they appear before or after they are updated. |  |
| Update Expression a| String |  An expression that defines one or more attributes to be updated, the action to be performed on them, and new value(s) for them. |  |
| Attribute Updates a| Object |  This is a legacy parameter. Use updateExpression instead. |  |
| Expected a| Object |  This is a legacy parameter. Use conditionExpression instead. |  |
| Conditional Operator a| Enumeration, one of:

** AND
** OR |  |  |
| Condition Expression a| String |  |  |
| Attribute Names a| Object |  |  |
| Attribute Values a| Object |  |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<UpdateItemResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[updateTable]]
=== Update Table
`<dynamodb:update-table>`


This operation modifies the provisioned throughput settings, global secondary indexes, or DynamoDB Streams settings for a given table.

For information, see the http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_UpdateTable.html[Amazon DynamoDB API Reference] for this operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  The name of the table to update. |  | x
| Attribute Definitions a| Array of <<AttributeDefinition>> |  An array of attributes that describe the key schema for the table and indexes. If you are adding a new global secondary index to the table, AttributeDefinitions must include the key elements of the new index. |  |
| Read Capacity Units a| Number |  The maximum number of strongly consistent reads consumed per second before DynamoDB returns a ThrottlingException. |  |
| Write Capacity Units a| Number |  The maximum number of writes consumed per second before DynamoDB returns a ThrottlingException. |  |
| Global Secondary Index Updates a| Array of <<GlobalSecondaryIndexUpdate>> |  An array of one or more global secondary indexes for the table. |  |
| Stream View Type a| Enumeration, one of:

** NEW_IMAGE
** OLD_IMAGE
** NEW_AND_OLD_IMAGES
** KEYS_ONLY |  When an item in the table is modified, StreamViewType determines what information is written to the stream for this table. |  |
| Stream Enabled a| Boolean |  Indicates whether DynamoDB Streams is enabled (true) or disabled (false) on the table. |  false |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<TableDescription>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[describeStream]]
=== Describe Stream
`<dynamodb:describe-stream>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Stream ARN a| String |  |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<StreamDescription>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<streams-config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[getRecords]]
=== Get Records
`<dynamodb:get-records>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Shard Iterator a| String |  |  | x
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of <<Record>> payload and <<RequestIDAttribute>> attributes
|===

=== For Configurations
* <<streams-config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[getShardIterator]]
=== Get Shard Iterator
`<dynamodb:get-shard-iterator>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Shard Id a| String |  |  | x
| Shard Iterator Type a| String |  |  | x
| Starting Sequence Number a| String |  |  |
| Stream ARN a| String |  |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<streams-config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:CONNECTIVITY
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:RETRY_EXHAUSTED
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION


[[listStreams]]
=== List Streams
`<dynamodb:list-streams>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  |  |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [<<Stream>>] payload and <<RequestIDAttribute>> attributes
|===

=== For Configurations
* <<streams-config>>

==== Throws
* DYNAMODB:ACCESS_DENIED_EXCEPTION
* DYNAMODB:CONDITIONAL_CHECK_FAILED_EXCEPTION
* DYNAMODB:INCOMPLETE_SIGNATURE_EXCEPTION
* DYNAMODB:ITEM_COLLECTION_SIZE_LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:LIMIT_EXCEEDED_EXCEPTION
* DYNAMODB:MISSING_AUTHENTICATION_TOKEN_EXCEPTION
* DYNAMODB:PROVISIONED_THROUGHPUT_EXCEEDED_EXCEPTION
* DYNAMODB:RESOURCE_IN_USE_EXCEPTION
* DYNAMODB:RESOURCE_NOT_FOUND_EXCEPTION
* DYNAMODB:THROTTLING_EXCEPTION
* DYNAMODB:UNKNOWN
* DYNAMODB:UNRECOGNIZED_CLIENT_EXCEPTION
* DYNAMODB:VALIDATION_EXCEPTION



== Types
[[Tls]]
=== TLS

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
=== CRL File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds) | |
| Count a| Number | The number of reconnection attempts to make | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[BatchWriteItemResult]]
=== Batch Write Item Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Consumed Capacity a| Array of <<ConsumedCapacity>> |  |  |
| Item Collection Metrics a| Object |  |  |
| Unprocessed Items a| Object |  |  |
|===

[[ConsumedCapacity]]
=== Consumed Capacity

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Capacity Units a| Number |  |  |
| Global Secondary Indexes a| Object |  |  |
| Local Secondary Indexes a| Object |  |  |
| Table a| Number |  |  |
| Table Name a| String |  |  |
|===

[[RequestIDAttribute]]
=== Request ID Attribute

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Request Id a| String |  |  |
|===

[[BatchGetItemResult]]
=== Batch Get Item Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Consumed Capacity a| Array of <<ConsumedCapacity>> |  |  |
| Responses a| Object |  |  |
| Unprocessed Keys a| Object |  |  |
|===

[[TableDescription]]
=== Table Description

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attribute Definitions a| Array of <<AttributeDefinition>> |  |  |
| Creation Date Time a| DateTime |  |  |
| Global Secondary Indexes a| Array of <<GlobalSecondaryIndexDescription>> |  |  |
| Item Count a| Number |  |  |
| Key Schema a| Array of <<KeySchemaElement>> |  |  |
| Latest Stream Arn a| String |  |  |
| Latest Stream Label a| String |  |  |
| Local Secondary Indexes a| Array of <<LocalSecondaryIndexDescription>> |  |  |
| Provisioned Throughput a| <<ProvisionedThroughputDescription>> |  |  |
| Stream Specification a| <<StreamSpecification>> |  |  |
| Table Arn a| String |  |  |
| Table Name a| String |  |  |
| Table Size Bytes a| Number |  |  |
| Table Status a| String |  |  |
|===

[[AttributeDefinition]]
=== Attribute Definition

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attribute Name a| String |  |  |
| Attribute Type a| Enumeration, one of:

** STRING
** NUMBER
** BINARY |  |  |
|===

[[GlobalSecondaryIndexDescription]]
=== Global Secondary Index Description

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Backfilling a| Boolean |  |  |
| Index Arn a| String |  |  |
| Index Name a| String |  |  |
| Index Size Bytes a| Number |  |  |
| Index Status a| Enumeration, one of:

** CREATING
** UPDATING
** DELETING
** ACTIVE |  |  |
| Item Count a| Number |  |  |
| Key Schema a| Array of <<KeySchemaElement>> |  |  |
| Projection a| <<Projection>> |  |  |
| Provisioned Throughput a| <<ProvisionedThroughputDescription>> |  |  |
|===

[[KeySchemaElement]]
=== Key Schema Element

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attribute Name a| String |  |  |
| Key Type a| Enumeration, one of:

** HASH
** RANGE |  |  |
|===

[[Projection]]
=== Projection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Non Key Attributes a| Array of String |  |  |
| Projection Type a| Enumeration, one of:

** ALL
** KEYS_ONLY
** INCLUDE |  |  |
|===

[[ProvisionedThroughputDescription]]
=== Provisioned Throughput Description

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Last Decrease Date Time a| DateTime |  |  |
| Last Increase Date Time a| DateTime |  |  |
| Number Of Decreases Today a| Number |  |  |
| Read Capacity Units a| Number |  |  |
| Write Capacity Units a| Number |  |  |
|===

[[LocalSecondaryIndexDescription]]
=== Local Secondary Index Description

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Index Arn a| String |  |  |
| Index Name a| String |  |  |
| Index Size Bytes a| Number |  |  |
| Item Count a| Number |  |  |
| Key Schema a| Array of <<KeySchemaElement>> |  |  |
| Projection a| <<Projection>> |  |  |
|===

[[StreamSpecification]]
=== Stream Specification

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Stream Enabled a| Boolean |  |  |
| Stream View Type a| Enumeration, one of:

** NEW_IMAGE
** OLD_IMAGE
** NEW_AND_OLD_IMAGES
** KEYS_ONLY |  |  |
|===

[[GlobalSecondaryIndex]]
=== Global Secondary Index

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Index Name a| String |  |  |
| Key Schema a| Array of <<KeySchemaElement>> |  |  |
| Projection a| <<Projection>> |  |  |
| Provisioned Throughput a| <<ProvisionedThroughput>> |  |  |
|===

[[ProvisionedThroughput]]
=== Provisioned Throughput

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Read Capacity Units a| Number |  |  |
| Write Capacity Units a| Number |  |  |
|===

[[LocalSecondaryIndex]]
=== Local Secondary Index

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Index Name a| String |  |  |
| Key Schema a| Array of <<KeySchemaElement>> |  |  |
| Projection a| <<Projection>> |  |  |
|===

[[DeleteItemResult]]
=== Delete Item Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attributes a| Object |  |  |
| Consumed Capacity a| <<ConsumedCapacity>> |  |  |
| Item Collection Metrics a| <<ItemCollectionMetrics>> |  |  |
|===

[[ItemCollectionMetrics]]
=== Item Collection Metrics

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Item Collection Key a| Object |  |  |
| Size Estimate Range GB a| Array of Number |  |  |
|===

[[GetItemResult]]
=== Get Item Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Consumed Capacity a| <<ConsumedCapacity>> |  |  |
| Item a| Object |  |  |
|===

[[ListTablesResult]]
=== List Tables Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Last Evaluated Table Name a| String |  |  |
| Table Names a| Array of String |  |  |
|===

[[PutItemResult]]
=== Put Item Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attributes a| Object |  |  |
| Consumed Capacity a| <<ConsumedCapacity>> |  |  |
| Item Collection Metrics a| <<ItemCollectionMetrics>> |  |  |
|===

[[QueryResult]]
=== Query Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Consumed Capacity a| <<ConsumedCapacity>> |  |  |
| Count a| Number |  |  |
| Items a| Array of Object |  |  |
| Last Evaluated Key a| Object |  |  |
| Scanned Count a| Number |  |  |
|===

[[ScanResult]]
=== Scan Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Consumed Capacity a| <<ConsumedCapacity>> |  |  |
| Count a| Number |  |  |
| Items a| Array of Object |  |  |
| Last Evaluated Key a| Object |  |  |
| Scanned Count a| Number |  |  |
|===

[[UpdateItemResult]]
=== Update Item Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attributes a| Object |  |  |
| Consumed Capacity a| <<ConsumedCapacity>> |  |  |
| Item Collection Metrics a| <<ItemCollectionMetrics>> |  |  |
|===

[[GlobalSecondaryIndexUpdate]]
=== Global Secondary Index Update

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Create a| <<CreateGlobalSecondaryIndexAction>> |  |  |
| Delete a| String |  |  |
| Update a| <<UpdateGlobalSecondaryIndexAction>> |  |  |
|===

[[CreateGlobalSecondaryIndexAction]]
=== Create Global Secondary Index Action

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Index Name a| String |  |  |
| Key Schema a| Array of <<KeySchemaElement>> |  |  |
| Projection a| <<Projection>> |  |  |
| Provisioned Throughput a| <<ProvisionedThroughput>> |  |  |
|===

[[UpdateGlobalSecondaryIndexAction]]
=== Update Global Secondary Index Action

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Index Name a| String |  |  |
| Provisioned Throughput a| <<ProvisionedThroughput>> |  |  |
|===

[[StreamDescription]]
=== Stream Description

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Creation Request Date Time a| DateTime |  |  |
| Key Schema a| Array of <<KeySchemaElement>> |  |  |
| Last Evaluated Shard Id a| String |  |  |
| Shards a| Array of <<Shard>> |  |  |
| Stream Arn a| String |  |  |
| Stream Label a| String |  |  |
| Stream Status a| Enumeration, one of:

** ENABLING
** ENABLED
** DISABLING
** DISABLED |  |  |
| Stream View Type a| Enumeration, one of:

** NEW_IMAGE
** OLD_IMAGE
** NEW_AND_OLD_IMAGES
** KEYS_ONLY |  |  |
| Table Name a| String |  |  |
|===

[[Shard]]
=== Shard

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Parent Shard Id a| String |  |  |
| Sequence Number Range a| <<SequenceNumberRange>> |  |  |
| Shard Id a| String |  |  |
|===

[[SequenceNumberRange]]
=== Sequence Number Range

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Ending Sequence Number a| String |  |  |
| Starting Sequence Number a| String |  |  |
|===

[[Record]]
=== Record

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Aws Region a| String |  |  |
| Dynamodb a| <<StreamRecord>> |  |  |
| Event ID a| String |  |  |
| Event Name a| Enumeration, one of:

** INSERT
** MODIFY
** REMOVE |  |  |
| Event Source a| String |  |  |
| Event Version a| String |  |  |
| User Identity a| <<Identity>> |  |  |
|===

[[StreamRecord]]
=== Stream Record

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Approximate Creation Date Time a| DateTime |  |  |
| Keys a| Object |  |  |
| New Image a| Object |  |  |
| Old Image a| Object |  |  |
| Sequence Number a| String |  |  |
| Size Bytes a| Number |  |  |
| Stream View Type a| Enumeration, one of:

** NEW_IMAGE
** OLD_IMAGE
** NEW_AND_OLD_IMAGES
** KEYS_ONLY |  |  |
|===

[[Identity]]
=== Identity

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Principal Id a| String |  |  |
| Type a| String |  |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of instances that is initially be allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | The maximum amount of instances to keep in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[Stream]]
=== Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Stream Arn a| String |  |  |
| Stream Label a| String |  |  |
| Table Name a| String |  |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
